=======
CHANGES
=======

1.6.1 (unreleased)
------------------

- Add paste.ini_tmpl to .tar.gz to fix start-schooltool-instance not creating
  the required paste.ini file.
  NOTE: run ``make-schooltool-instance instance`` to fix ``instance`` if it does
  not start.
- Fixed XLS import crashes:

  + When username is a number (https://launchpad.net/bugs/801870)
  + When no file was selected for import


1.6.0 (2011-04-25)
------------------

- Move schooltool.commendation example plugin into its own project
  https://launchpad.net/schooltool.commendation
- Workaround tests failing if translations have been compiled (https://launchpad.net/bugs/79761).
- Fixed crashes when term title is "First" or "Last" (https://launchpad.net/bugs/485639).


1.6.0b1 (2011-04-18)
--------------------

New features
++++++++++++

- Added report package (https://launchpad.net/bugs/429588)

  + New Manage->Reports page listing all available reports.
  + New reportLink directive for registering reports.
  + Copied translations from gradebook.

- Removed 'Report a bug on Launchpad' link from the footer
- Include meta.zcml of plugins first to allow them have optional dependencies.
- Updated translations.


1.6.0a1 (2011-02-23)
--------------------

New features
++++++++++++

- Added boolean demographic fields.
- Added customizable fields for resources.
- Added limit keys property to demographic fields.
- Created group-aware (teacher, student, administrator) person add views.
- Use Liberation fonts instead of non-free Microsoft fonts (https://launchpad.net/bugs/371655).
  You have to edit schooltool.conf and change msttcorefonts to ttf-liberation to
  re-enable PDF generation.
- Update included jQuery to 1.5 (https://launchpad.net/bugs/588645).
- Developer documentation can be generated from source.

Cleanup
+++++++

- Removed obsolete dependencies, support upgrading from schooltool >= 1.0 only.
- Removed obsolete config keys.