@@ -781,21 +781,23 @@ class SectionImporter(ImporterBase):
             if num_errors < len(self.errors):
                 continue
 
-            resources[day_id, period_id] = resource_id
+            if resource_id:
+                resources[day_id, period_id] = resource_id
             act = TimetableActivity(title=course.title, owner=section)
             timetable[day_id].add(period_id, act)
 
         for event in ISchoolToolCalendar(section):
             if ITimetableCalendarEvent.providedBy(event):
-                resource_id = resources[event.day_id, event.period_id]
-                resource = rc[resource_id]
-                event.bookResource(removeSecurityProxy(resource))
+                resource_id = resources.get((event.day_id, event.period_id))
+                if resource_id:
+                    resource = rc[resource_id]
+                    event.bookResource(removeSecurityProxy(resource))
 
     def import_timetables(self, sh, row, section):
         for row in range(row, sh.nrows):
             if sh.cell_value(rowx=row, colx=0) == 'School Timetable':
                 self.import_timetable(sh, row, section)
-            if sh.cell_value(rowx=row, colx=0) == '':
+            elif sh.cell_value(rowx=row, colx=0) == '':
                 break
         return row
 
@@ -810,7 +812,7 @@ class SectionImporter(ImporterBase):
         courses = ICourseContainer(section)
 
         row += 4
-        if sh.cell_value(rowx=row, colx=0) == 'Courses':
+        if self.getCellValue(sh, row, 0, '') == 'Courses':
             row += 1
             for row in range(row, sh.nrows):
                 if sh.cell_value(rowx=row, colx=0) == '':
@@ -836,7 +838,7 @@ class SectionImporter(ImporterBase):
             return
 
         persons = self.context['persons']
-        if sh.cell_value(rowx=row, colx=0) == 'Students':
+        if self.getCellValue(sh, row, 0, '') == 'Students':
             row += 1
             for row in range(row, sh.nrows):
                 if sh.cell_value(rowx=row, colx=0) == '':
@@ -855,7 +857,7 @@ class SectionImporter(ImporterBase):
                     section.members.add(removeSecurityProxy(member))
             row += 1
 
-        if sh.cell_value(rowx=row, colx=0) == 'Instructors':
+        if self.getCellValue(sh, row, 0, '') == 'Instructors':
             row += 1
             for row in range(row, sh.nrows):
                 if sh.cell_value(rowx=row, colx=0) == '':
@@ -874,7 +876,7 @@ class SectionImporter(ImporterBase):
                     section.instructors.add(removeSecurityProxy(instructor))
             row += 1
 
-        if sh.cell_value(rowx=row, colx=0) == 'School Timetable':
+        if self.getCellValue(sh, row, 0, '') == 'School Timetable':
             self.import_timetables(sh, row, section)
 
     def process(self):
@@ -956,7 +958,7 @@ class GroupImporter(ImporterBase):
 
         row += 5
         pc = self.context['persons']
-        if sh.cell_value(rowx=row, colx=0) == 'Members':
+        if self.getCellValue(sh, row, 0, '') == 'Members':
             row += 1
             for row in range(row, sh.nrows):
                 if sh.cell_value(rowx=row, colx=0) == '':
